# face-recognition-web-server

./: .gitignore  CMakeLists.txt  README.md
.githooks/: pre-push
.github/workflows/: pr-presubmit.yml
docs/: LOAD_TEST.md  SERVER.md
scripts/: presubmit.sh
src/: http.c  http.h  load_test.c  main.c  router.c  router.h  server_config.h  static_assets.c  static_assets.h
tests/: test_http.c  test_router.c  test_static_assets.c  test_utils.h
web/: app.js  index.html  styles.css
